--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -14,7 +14,20 @@ spec:
     spec:
       containers:
       - name: waf-api
-        image: in-cluster
-        imagePullPolicy: Never
+        image: waf-api:v1.0
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: waf-api
+spec:
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: waf-api
+  ports:
+    - name: http
+      port: 80
+      targetPort: 8080
