--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -26,7 +26,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app.kubernetes.io/name: waf-api
+    app: waf-api
   ports:
     - name: http
       port: 80
