feat: add delete WAF chore: remove unnecessary config files chore: use arthurcgc/waf-modsecurity:latest

--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -16,8 +16,7 @@ spec:
       serviceAccountName: waf-service-account
       containers:
       - name: waf-api
-        image: arthurcgc/waf
-        imagePullPolicy: IfNotPresent
+        image: arthurcgc/waf:latest
         resources:
           limits:
             memory: "128Mi"
