feat: custom rule successfully updates nginx object wip: need to restart Nginx pods for changes to take effect

--- a/config/samples/waf_v1_wafplan_default.yaml
+++ b/config/samples/waf_v1_wafplan_default.yaml
@@ -4,8 +4,8 @@ metadata:
   name: default
   namespace: frontend
 spec:
-  image: arthurcgc/modsecurity:dos
-  description: "dos enabled waf plan"
+  image: arthurcgc/modsecurity
+  description: "default waf plan"
   resources:
     limits:
       memory: "128Mi"
