--- a/config/crd/bases/waf.arthurcgc.waf-operator_wafs.yaml
+++ b/config/crd/bases/waf.arthurcgc.waf-operator_wafs.yaml
@@ -72,6 +72,66 @@ spec:
                 between explicit zero and not specified. Defaults to 1.
               format: int32
               type: integer
+            rules:
+              properties:
+                customRules:
+                  description: User created rules
+                  items:
+                    type: string
+                  type: array
+                defaultHoney:
+                  description: "\tIf enabled we set the following rule inside REQUEST-910-IP-REPUTATION.conf:
+                    \tThis rule checks the client IP address against a list of recent
+                    IPs captured  from the SpiderLabs web honeypot systems (last 48
+                    hours). \n SecRule TX:REAL_IP \"@ipMatchFromFile ip_blacklist.data\"
+                    \\     \"id:910110,\\     phase:2,\\     block,\\     t:none,\\
+                    \    msg:'Client IP in Trustwave SpiderLabs IP Reputation Blacklist',\\
+                    \    tag:'application-multi',\\     tag:'language-multi',\\     tag:'platform-multi',\\
+                    \    tag:'attack-reputation-ip',\\     tag:'paranoia-level/1',\\
+                    \    severity:'CRITICAL',\\     setvar:'tx.anomaly_score_pl1=+%{tx.critical_anomaly_score}',\\
+                    \    setvar:'ip.reput_block_flag=1',\\     setvar:'ip.reput_block_reason=%{rule.msg}',\\
+                    \    expirevar:'ip.reput_block_flag=%{tx.reput_block_duration}'\""
+                  type: boolean
+                removeAfter:
+                  description: Used to add/edit rules in RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf
+                  properties:
+                    disruptiveAction:
+                      description: In Anomaly Mode (default in CRS3), the rules in
+                        REQUEST-949-BLOCKING-EVALUATION.conf and RESPONSE-959-BLOCKING-EVALUATION.conf
+                        check the accumulated attack scores against your policy. To
+                        apply a disruptive action, they overwrite the default actions
+                        specified in SecDefaultAction (setup.conf) with a 'deny' action.
+                        This 'deny' is by default paired with a 'status:403' action.
+                      properties:
+                        action:
+                          description: In the example above, we would set Action =
+                            redirect and RedirectURL = "http://%{request_headers.host}/"
+                          type: string
+                        dos:
+                          description: 'Example: drop the connection (best for DoS
+                            attacks) SecRuleUpdateActionById 949110 "t:none,drop"
+                            SecRuleUpdateActionById 959100 "t:none,drop" When enabled
+                            we should add a DisruptiveAction to drop the connection'
+                          type: boolean
+                        redirect:
+                          type: string
+                      type: object
+                    removeById:
+                      description: 'Example Exclusion Rule: To unconditionally disable
+                        a rule ID ModSecurity Rule Exclusion: 942100 SQL Injection
+                        Detected via libinjection SecRuleRemoveById 942100'
+                      items:
+                        type: string
+                      type: array
+                    removeByTag:
+                      description: 'Example Exclusion Rule: Remove a group of rules
+                        ModSecurity Rule Exclusion: Disable PHP injection rules SecRuleRemoveByTag
+                        "attack-injection-php"'
+                      items:
+                        type: string
+                      type: array
+                  type: object
+              type: object
             service:
               description: Service to expose the nginx instance
               properties:
