fix: update to waf now updates podspec accordingly

--- a/config/samples/waf_v1_wafplan_dos.yaml
+++ b/config/samples/waf_v1_wafplan_dos.yaml
@@ -4,7 +4,7 @@ metadata:
   name: default
   namespace: frontend
 spec:
-  image: arthurcgc/modsecurity
+  image: arthurcgc/modsecurity:dos
   description: "dos enabled waf plan"
   resources:
     limits:
